1998-12-09  David Faure  <faure@kde.org>

	* kfmman.cpp: Fixed Visual Schnauzer for files with special chars
	such as "'". Bug reported by Christian Fertig
	<fertig@informatik.uni-frankfurt.de>.
	
	* kfmgui.cpp: Added slotConfigure, which re-reads the
	configuration and applies it.

1998-12-07  Alex Zepeda  <garbanzo@hooked.net>

	* kbind.cpp: Quashed another "uninitalized" variable.

1998-12-07  David Faure  <faure@kde.org>

	* Delete showConfigUI from kfmclient options. Added configure
	instead. Will be used to re-read KFM configuration. Still todo.
	
1998-12-03  David Faure  <faure@kde.org>

	* kfmgui.cpp : Added Go menu, with up/back/forward/home and the last 10 history URLs.

1998-12-01  Waldo Bastian <bastian@kde.org>
    
        * Added HTTP-cookies. They don't get saved and they are always on 
        and they scream for some additional configuration.

1998-11-29  Alex Zepeda  <garbanzo@hooked.net>

	* kbind.cpp: Sort include headers, and correctly include a file to
	get MAX_PATH or whatever we were looking for.

1998-11-28  Kurt Granroth <granroth@kde.org>

   * KFM will now use 'KCursor::handCursor()' if the user chooses the
	  'change cursor over link' option.

1998-11-28  David Faure  <faure@kde.org>

	* Applied and adapted patches from <rjakob@duffy1.franken.de>:
	- KFM sets working directory when launching an application.
	- Default mimetype (not tested)
	- KFM tree view follow mode (add kfm_tree_follow=On in [Settings] in 
	  your kfmrc to enable it - at the moment). Some repaint problems, 
	  but works.
	* Removed fileentry.cpp / fileentry.h, not used (in this directory)

1998-11-26  David Faure  <faure@kde.org>

	* kioslave/file.cpp : Sort links to dirs with dirs. Fixed sorting of dirs themselves.

1998-11-25  David Faure  <faure@kde.org>

	* kfmman.cpp : Added key navigation (mostly in khtmlw, but also a bit in kfm)

1998-11-21 Lars Knoll <knoll@mpi-hd.mpg.de>
	* added support for url redirections
	  (<meta http-equiv="refresh" ...>) command
