@@ -59,6 +59,24 @@ protected:
     KFinderNode node;
     QPopupMenu *popupMenu;
     KfmGui *gui;
+    /**
+     * The menu "New" in the popup menu.
+     * Since the items of this menu are not connected themselves
+     * we need a pointer to this menu to get information about the
+     * selected menu item.
+     */
+    QPopupMenu *menuNew;
+
+    /**
+     * List of all template files. It is important that they are in
+     * the same order as the 'New' menu.
+     */
+    QStrList templatesList;
+protected slots:
+    /**
+     * Popup Menu "New->*"
+     */
+    void slotNewFile( int _id );
 };
 
 class KFMDirTreeItem : public KFinderItem
